# flare

./: .gitignore  .gitignore~  CMakeLists.txt  FlareApp  README.md  TSPlog.txt  \  flare.sh  log.sh  log.txt  log10.txt  log11.txt  log2.txt  logtest.txt  loltest.txt  tsplog.txt
cmake_modules/: FindGLEW.cmake  FindGLFW.cmake  FindOpenCL.cmake
config/: fisheye.xml  flareConfig.txt  kernelConstants.txt  kernelConstants.txt~  standalone.xml  vrarenasim.xml
inc/: .CLHandler.h.swp  .VoxelData.h.swp  Animator.h  BrickManager.h  BrickReader.h  CLHandler.h  CLHandlerBase.h  CLHandlerBuffer.h  CLHandlerPBO.h  CLManager.h  CLProgram.h  Config.h  KernelConstants.h  MappingKey.h  PixelBuffer.h  Raycaster.h  Renderer.h  SGCTWinManager.h  ShaderProgram.h  TSP.h  Texture.h  Texture1D.h  Texture2D.h  Texture3D.h  TransferFunction.h  Utils.h  VDFReader.h  VoxelData.h  VoxelDataFrame.h  VoxelDataHeader.h  WindowManager.h
kernels/: .Raycaster.cl.swk  .Raycaster.cl.swl  .Raycaster.cl.swm  .Raycaster.cl.swn  .Raycaster.cl.swo  .Raycaster.cl.swp  Raycaster.cl  RaycasterBricks.cl  RaycasterTSP.cl  RaycasterTexture.cl  TSPTraversal.cl
src/: .CLHandler.cpp.swm  .CLHandler.cpp.swn  .CLHandler.cpp.swo  .CLHandler.cpp.swp  .CMakeLists.txt.swp  .FlareApp.cpp.swp  .Raycaster.cpp.swo  Animator.cpp  BrickManager.cpp  BrickReader.cpp  CLHandler.cpp  CLHandlerBuffer.cpp  CLHandlerPBO.cpp  CLManager.cpp  CLProgram.cpp  CMakeLists.txt  CMakeLists.txt~  Config.cpp  FlareApp.cpp  MappingKey.cpp  PixelBuffer.cpp  Raycaster.cpp  Renderer.cpp  SGCTWinManager.cpp  ShaderProgram.cpp  TSP.cpp  Texture.cpp  Texture1D.cpp  Texture2D.cpp  Texture3D.cpp  TextureAtlas.cpp  Timer.cpp  TransferFunction.cpp  Utils.cpp  VDFReader.cpp  VoxelDataHeader.cpp  WindowManager.cpp
transferfunctions/: blue.txt  fire.txt  test.txt  test.txt~
